fix: image metadata

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Try to memorize the word in time"
     />
+    <meta name="title" property="og:title" content="Master Memory Game" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://raw.githubusercontent.com/rromodev/master-memory-game/main/images/Master_Memory_Game.png" />
+    <meta name="description" property="og:description" content="Try to memorize the word in time" />
+    <meta name="author" content="rromodev" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
